2008-09-04  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/tracker-metadata-utils.c: (call_text_filter),
	(get_file_in_locale), (get_file_content): Split the
	get_file_content() up into a few smaller functions. Also check the
	WHOLE string for UTF-8 compliance instead of JUST when we reach
	the maximum indexable allowance. Plus don't free buf which is a
	stack allocated buffer. Also made it possible to try and convert
	from locale to UTF-8 with a #define at the top of the file. Trying
	this worked for some files and not for others. A lot of files were
	just dropped because the last character was something weird. I
	thought it would be better to index as much content as possible,
	so for now this is disabled so we index up to the last valid UTF-8
	character. 

2008-09-03  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/tracker-metadata-utils.c: (get_file_content),
	(tracker_metadata_utils_get_text),
	(tracker_metadata_utils_get_thumbnail): Improved the
	get_file_content() function to check for '\n' in the first 64Kb
	buffer and if it doesn't exist we don't index the file. Also,
	check for UTF-8 validity so we don't stop on exactly 'x' bytes but
	where the last valid character is.

2008-09-03  Philip Van Hoof  <philip@codeminded.be>

	* ChangeLog:
	* src/trackerd/tracker-processor.c: Reverted revision 2159

2008-08-29  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c (process_func)
	(tracker_indexer_check_state): If for some reason the indexer is
	stopped and started again somewhere inside process_func(), the indexer
	would end up with the current idle function "detached" but still
	running, and a new one. So, if we're inside process_func, we won't
	remove the idle function immediately, instead we'll wait and make the
	idle func return FALSE if the indexer should still be paused.

2008-08-29  Ivan Frade  <ivan.frade@nokia.com>

	* src/tracker-indexer/tracker-indexer.c
	* src/trackerd/tracker-daemon.c